# streamweave

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: backend.yml  docs.yml  frontend.yml  integration.yml
backend/: Dockerfile  Dockerfile.worker  ensure_admin.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 285a94f840e1_initial_schema.py  a1b2c3d4e5f6_m35_soft_delete_audit_notifications_requests.py  b2c3d4e5f6a7_add_requester_email_and_notification_dismiss.py  c3d4e5f6a7b8_add_instrument_last_harvested_at.py
backend/app/: config.py  database.py  dev_seed_torture.py  main.py
backend/app/api/: access.py  audit.py  auth_check.py  deps.py  files.py  groups.py  hooks.py  instrument_requests.py  instruments.py  notifications.py  pagination.py  projects.py  schedules.py  service_accounts.py  storage.py  transfers.py  users.py
backend/app/auth/: setup.py
backend/app/flows/: harvest.py
backend/app/hooks/: base.py  registry.py  runner.py
backend/app/hooks/builtin/: access_assignment.py  file_filter.py  metadata_enrichment.py
backend/app/models/: __init__.py  access.py  audit.py  base.py  file.py  group.py  hook.py  instrument.py  instrument_request.py  notification.py  project.py  schedule.py  storage.py  transfer.py  user.py
backend/app/schemas/: access.py  audit.py  file.py  group.py  hook.py  instrument.py  instrument_request.py  notification.py  project.py  schedule.py  storage.py  transfer.py  user.py
backend/app/services/: access.py  audit.py  credentials.py  db.py  discovery.py  email.py  identifiers.py  notifications.py  prefect_client.py  storage_test.py
backend/app/transfers/: base.py  factory.py  rclone.py
backend/scripts/: create-admin.py
backend/tests/: conftest.py  test_config.py  test_database.py
backend/tests/test_api/: test_access.py  test_audit.py  test_auth.py  test_auth_check.py  test_files.py  test_groups.py  test_health.py  test_hooks_api.py  test_instrument_requests.py  test_instruments.py  test_me.py  test_notifications.py  test_pagination_torture.py  test_projects.py  test_schedules.py  test_service_accounts.py  test_storage.py  test_torture_seed.py  test_transfers.py  test_users_admin.py
backend/tests/test_e2e/: test_harvest_e2e.py
backend/tests/test_flows/: test_harvest.py
backend/tests/test_hooks/: test_access_assignment.py  test_file_filter.py  test_metadata_enrichment.py  test_registry.py  test_runner.py
backend/tests/test_services/: test_credentials.py  test_db.py  test_email.py  test_notifications.py  test_prefect_client.py  test_storage_test.py
backend/tests/test_transfers/: test_factory.py  test_rclone.py
caddy/: Caddyfile.dev
dev/: seed.py
docs/: README.md  api.md  architecture.md  backend-demo.ipynb  frontend-testing-guide.md  index.md
docs/_static/: extra.css
docs/getting-started/: development.md  quickstart.md  simlab.md
frontend/: Caddyfile  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ConfirmDialog.tsx  ErrorMessage.tsx  Modal.tsx  NotificationBell.tsx  PageHeader.tsx  Table.tsx  Toasts.tsx  Toggle.tsx  Tooltip.tsx
frontend/src/contexts/: AuthContext.tsx  PreferencesContext.tsx  ToastContext.tsx  ToastProvider.tsx
frontend/src/hooks/: useFiles.ts  useGroups.ts  useHealth.ts  useHooks.ts  useInstrumentRequests.ts  useInstruments.ts  (+7 more)
scripts/: build_docs.sh  create-admin.py  lint.sh  lint_backend.sh  lint_frontend.sh  run-e2e.sh  setup-dev-certs.sh  test.sh  test_backend.sh  test_frontend.sh
simlab/: Dockerfile.samba  docker-compose.simlab.yml  seed.py
src/streamweave/: __init__.py
tests/: conftest.py
tests/test_api/: test_service_accounts.py  test_storage.py
tests/test_services/: test_credentials.py  test_identifiers.py
(+157 files in other folders)
