[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamweave"
version = "0.0.0.1"
description = "Scientific instrument data harvesting and management system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Joshua Taillon", email = "josh@datasophos.co" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/datasophos/streamweave"

[tool.hatch.build.targets.wheel]
packages = ["src/streamweave"]
