[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamweave"
version = "0.1.0"
description = "Scientific instrument data harvesting and management system"
readme = {text = "Scientific instrument data harvesting and management system", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Joshua Taillon", email = "josh@datasophos.co" },
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "fastapi-users[sqlalchemy]>=14,<15",
    "cryptography>=44,<45",
    "python-multipart>=0.0.18",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[project.urls]
Repository = "https://github.com/datasophos/streamweave"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
