[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamweave"
version = "0.1.0"
description = "Scientific instrument data harvesting and management system"
readme = {text = "Scientific instrument data harvesting and management system", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Joshua Taillon", email = "josh@datasophos.co" },
]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "aiosqlite>=0.20,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "fastapi-users[sqlalchemy]>=14,<15",
    "cryptography>=44,<45",
    "python-multipart>=0.0.18",
    "httpx>=0.28,<1",
    "prefect>=3.0,<4",
    "xxhash>=3.4,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
    "ty>=0.0.0a1",
    "pre-commit>=4.0,<5",
    "mkdocs-jupyter>=0.25,<1",
    "jupyterlab>=4.5.5",
    "pytest-cov>=6.0,<7",
]

[project.urls]
Repository = "https://github.com/datasophos/streamweave"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires full Docker stack + simlab running",
]
addopts = "-m 'not integration' --cov=app --cov-report=term-missing --cov-report=lcov:coverage.lcov"

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # E501: line length handled by formatter; B008: FastAPI Depends() pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"
